force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_CMConfig__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CMConfig__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the agreement associated with the configuration</description>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Configurations</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>