force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__AncestorId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AncestorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the ancestor configuration</description>
    <label>Ancestor</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Derived Configurations</relationshipLabel>
    <relationshipName>DerivedConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>