force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ApprovalStatus__c</fullName>
    <description>The quote/agreement/standard approval indicator. Not applicable when cart approval is in effect.</description>
    <inlineHelpText>The quote/agreement/standard approval indicator. Not applicable when cart approval is in effect.</inlineHelpText>
    <label>Approval Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approval Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>