force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__BaseRelationCount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BaseRelationCount__c</fullName>
    <description>Counts the number of line items related to base product.</description>
    <label>Base Relation Count</label>
    <summaryFilterItems>
        <field>Apttus_Config2__LineItem__c.Apttus_Config2__HasBaseProduct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus_Config2__LineItem__c.Apttus_Config2__ConfigurationId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>