force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__BusinessObjectProfile__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BusinessObjectProfile__c</fullName>
    <description>The processing profile of the business object associated with the configuration</description>
    <inlineHelpText>“Regular” will process the quote as a single entity.  Select “Split” before clicking on Configure Products to allow the subdivision of the quote into multiple smaller quotes for business reasons, volume related reasons or multiple sold to accounts.</inlineHelpText>
    <label>Business Object Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>