force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__BusinessObjectRefId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BusinessObjectRefId__c</fullName>
    <description>ID of the business object associated with the configuration</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the business object associated with the configuration</inlineHelpText>
    <label>Business Object Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>