force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__BusinessObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BusinessObjectType__c</fullName>
    <description>The type of the business object associated with the configuration</description>
    <label>Business Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
                <default>true</default>
                <label>Agreement</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Collaboration Request</fullName>
            </value>
            <value>
                <fullName>Favorite Configuration</fullName>
            </value>
            <value>
                <fullName>Digital Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>