force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__CartDataCache2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CartDataCache2__c</fullName>
    <description>The cart data cache</description>
    <inlineHelpText>The cart data cache</inlineHelpText>
    <label>Cart Data Cache 2</label>
    <length>128000</length>
    <type>LongTextArea</type>
</CustomField>