force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__CollaborationRequestId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CollaborationRequestId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Collaboration Request business object.</description>
    <inlineHelpText>Lookup to the Collaboration Request business object.</inlineHelpText>
    <label>Collaboration Request</label>
    <referenceTo>Apttus_Config2__CollaborationRequest__c</referenceTo>
    <relationshipLabel>Product Configurations</relationshipLabel>
    <relationshipName>Product_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>