force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__ContractNumbers__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContractNumbers__c</fullName>
    <description>A comma separated list of contract numbers associated wth the cart</description>
    <label>Contract Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>