force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__CostRollupInfo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CostRollupInfo__c</fullName>
    <description>Contains JSON string with Cost Rollup information showing how the Costs are rolled up from a child all the way to the topmost parent.</description>
    <inlineHelpText>Contains JSON string with Cost Rollup information showing how the Costs are rolled up from a child all the way to the topmost parent.</inlineHelpText>
    <label>Cost Rollup Info</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>