force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__CouponCodes__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CouponCodes__c</fullName>
    <description>A comma separated list of coupon codes associated wth the cart</description>
    <inlineHelpText>A comma separated list of coupon codes associated wth the cart</inlineHelpText>
    <label>Coupon Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>