force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__CurrentActiveTask__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CurrentActiveTask__c</fullName>
    <description>The current active task for the cart</description>
    <inlineHelpText>The current active task for the cart</inlineHelpText>
    <label>Current Active Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloning Attribute Values</fullName>
            </value>
            <value>
                <fullName>Cloning Detail Objects</fullName>
            </value>
            <value>
                <fullName>Cloning Usage Tiers</fullName>
            </value>
            <value>
                <fullName>Cloning Adjustment Line Items</fullName>
            </value>
            <value>
                <fullName>Cloning Price Breakups</fullName>
            </value>
            <value>
                <fullName>Cloning Tax Breakups</fullName>
            </value>
            <value>
                <fullName>Cloning Agreement Price Rules</fullName>
            </value>
            <value>
                <fullName>Cloning Agreement Price Tier</fullName>
            </value>
            <value>
                <fullName>Cloning Rule Information</fullName>
            </value>
            <value>
                <fullName>Cloning Expression Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>