force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__CurrentUserId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CurrentUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the User Id of the User who accessed this configuration in edit mode</description>
    <inlineHelpText>Holds the User Id of the User who accessed this configuration in edit mode</inlineHelpText>
    <label>Current User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>