force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveDate__c</fullName>
    <description>The configuration effective date.</description>
    <label>Config Effective Date</label>
    <type>DateTime</type>
</CustomField>