force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__EffectivePriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectivePriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the price list effective for the configuration</description>
    <inlineHelpText>ID of the price list effective for the configuration</inlineHelpText>
    <label>Effective Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Configurations (Effective)</relationshipLabel>
    <relationshipName>Configurations2</relationshipName>
    <type>Lookup</type>
</CustomField>