force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__ExpectedEndDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpectedEndDate__c</fullName>
    <description>The expected end date for products and services</description>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>