force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__FinalizedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FinalizedDate__c</fullName>
    <description>Date when the configuration was finalized</description>
    <label>Finalized Date</label>
    <type>DateTime</type>
</CustomField>