force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__IsPricePending__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPricePending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether pricing is pending for line items in the configuration</description>
    <label>Is Price Pending</label>
    <type>Checkbox</type>
</CustomField>