force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__IsTransient__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsTransient__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates a transient configuration version that may get abandoned. A new configuration version is in transient state until the version is explicitly saved by the user.</description>
    <label>Is Transient</label>
    <type>Checkbox</type>
</CustomField>