force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__IsValidationPending__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsValidationPending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate the need of revalidation due to probable changes in configuration</description>
    <inlineHelpText>Flag to indicate the need of revalidation due to probable changes in configuration</inlineHelpText>
    <label>Is Validation Pending</label>
    <type>Checkbox</type>
</CustomField>