force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__LineItemsAwaitingPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LineItemsAwaitingPrice__c</fullName>
    <description>A comma separated list of line item numbers awaiting pricing</description>
    <label>Line Items Awaiting Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>