force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__LocationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated account location</description>
    <label>Location</label>
    <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
    <relationshipLabel>Configurations</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>