force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__OrderId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated order</description>
    <inlineHelpText>ID of the associated order</inlineHelpText>
    <label>Order</label>
    <referenceTo>Apttus_Config2__Order__c</referenceTo>
    <relationshipLabel>Configurations</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>