force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__ParentConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Product Configuration Id</description>
    <inlineHelpText>Parent Product Configuration Id</inlineHelpText>
    <label>Parent Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Child Configurations</relationshipLabel>
    <relationshipName>ChildConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>