force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__PendingTask__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PendingTask__c</fullName>
    <description>The pending task for the cart</description>
    <inlineHelpText>The pending task for the cart</inlineHelpText>
    <label>PendingTask</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clone</fullName>
            </value>
            <value>
                <fullName>Finalize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>