force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__PrimordialId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PrimordialId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the primordial configuration</description>
    <label>Primordial</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Descendant Configurations</relationshipLabel>
    <relationshipName>DescendantConfigurations</relationshipName>
    <type>Lookup</type>
</CustomField>