force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__PurchaseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PurchaseId__c</fullName>
    <description>The default purchase identifier associated with the configuration</description>
    <externalId>true</externalId>
    <inlineHelpText>The default purchase identifier associated with the configuration</inlineHelpText>
    <label>Purchase Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>