force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__SplitCriteriaKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SplitCriteriaKey__c</fullName>
    <description>Unique Identifier for Pricing Cart created using split criteria field values.</description>
    <inlineHelpText>Unique Identifier for Pricing Cart created using split criteria field values.</inlineHelpText>
    <label>Split Criteria Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>