force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__TaskCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TaskCompletedDate__c</fullName>
    <description>The date and time when the last task associated with the product configuration was completed</description>
    <inlineHelpText>The date and time when the last task associated with the product configuration was completed</inlineHelpText>
    <label>Task Completed Date</label>
    <type>DateTime</type>
</CustomField>