force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__UseType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UseType__c</fullName>
    <description>The product configuration type associated with the split cart.</description>
    <inlineHelpText>The product configuration type associated with the split cart.</inlineHelpText>
    <label>Use Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
                <default>true</default>
                <label>Main</label>
            </value>
            <value>
                <fullName>Config</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>