force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_Config2__VersionNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__VersionNumber__c</fullName>
    <description>The version number. The number increments with each version of the configuration, for example, 1, 2, 3.</description>
    <label>Version Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>