force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_CQApprov__Approval_Preview_Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CQApprov__Approval_Preview_Status__c</fullName>
    <description>Indicates the status of the approval preview process</description>
    <inlineHelpText>Indicates the status of the approval preview process</inlineHelpText>
    <label>Approval Preview Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>