force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_CQApprov__LineItem_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_CQApprov__LineItem_Approval_Status__c</fullName>
    <description>The overall approval status for line items associated with the cart</description>
    <inlineHelpText>The overall approval status for line items associated with the cart</inlineHelpText>
    <label>Line Item Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>