force-app/main/default/objects/Apttus_Config2__ProductConfiguration__c/fields/Apttus_QPConfig__Proposald__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__Proposald__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the quote/proposal associated with the configuration</description>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Configurations</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>